# route-sherlock

./: .gitignore  CONTRIBUTING.md  README.md  demo.py  pyproject.toml  ripestat_client.py  route-sherlock-design-v2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  methodology.md
docs/: ARCHITECTURE.md  DEVELOPMENT-LOG.md  FEATURES.md  NANOG-PC-Review.html  NANOG-SUBMISSION.md  NANOG-Slides-PPT.PPTX.key  NANOG-Slides-PPT.pptx  NANOG-Slides.html  NANOG-Slides.key  NANOG-Slides.pptx  NANOG-Slides1 2.key  NANOG-Slides1.key  NANOG-Slides1.pptx.key  create_pptx.py  validation-report.html
scripts/: validate_deck.py
src/route_sherlock/: __init__.py
src/route_sherlock/analysis/: __init__.py  analyzer.py  asn.py  models.py  paths.py  peer_risk_render.py  peer_risk_v2.py  peering.py  safeguards.py  track_record.py
src/route_sherlock/cache/: __init__.py  store.py
src/route_sherlock/cli/: __init__.py  commands.py  main.py
src/route_sherlock/collectors/: atlas.py  bgpstream.py  bogons.py  contacts.py  grip.py  irr.py  peeringdb.py  ripestat.py  rpki.py
src/route_sherlock/models/: atlas.py  peeringdb.py  ripestat.py
src/route_sherlock/synthesis/: __init__.py  engine.py
tests/: test_filecache.py  test_peeringdb_retry.py  test_ripestat_retry.py  test_rpki_sampling.py  test_safeguards.py
