[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "route-sherlock"
version = "0.1.0"
description = "Historical BGP intelligence for network operators"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["bgp", "networking", "peering", "routing", "incident-response"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "typer>=0.9",
    "rich>=13",
]

[project.optional-dependencies]
ai = ["anthropic>=0.18"]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
route-sherlock = "route_sherlock.cli.main:main"

[project.urls]
Homepage = "https://github.com/jd9091/route-sherlock"
Documentation = "https://github.com/jd9091/route-sherlock#readme"
Issues = "https://github.com/jd9091/route-sherlock/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
